# rust-encrypted-chat

./: .env  Cargo.toml  README.md
src/: app.rs  application_factory.rs  auth.rs  business.rs  lib.rs  main.rs  messages.rs  middleware.rs  routes.rs  secrets.rs  server.rs  session.rs  utils.rs  websocket_server.rs  websocket_session.rs
src/app/: application_factory.rs  application_model.rs  application_service.rs  application_utils.rs  chat.rs  redis.rs  service_redis.rs  user.rs  websocket.rs
src/app/chat/: dao.rs  service.rs
src/app/redis/: factory.rs  model.rs  service.rs
src/app/user/: factory.rs  model.rs  routes.rs  routes_model.rs  service.rs  service_model.rs  service_trait.rs
src/app/websocket/: factory.rs  model.rs  routes.rs  routes_model.rs  service.rs  service_model.rs  service_trait.rs
src/business/: application_factory.rs  application_model.rs  application_service.rs  service_redis.rs  user.rs
src/business/user/: factory.rs  model.rs  routes.rs  service.rs
src/messages/: websocket_server_messages.rs  websocket_session_messages.rs
src/middleware/: auth_extractor.rs  auth_middleware.rs  util_middleware.rs
src/persistence/: mongo.rs  redis.rs
src/routes/: auth.rs  index.rs  websocket_route.rs
src/server/: channel.rs  messages.rs  model.rs  server_response.rs  usersession.rs  websocket.rs  websocket_provider_redis.rs  websocket_redis_adpter.rs
src/session/: command_handler.rs  command_parser.rs  commands.rs  parsers.rs  session_handler.rs  session_messages.rs  websocket_session.rs
