[package]
name = "encrypted-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
uuid = {version="1.3.0", features=["v4"]}
actix = "0.13.0"
actix-web-actors = "4.2.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"


[lib]
name = "encrypted_chat"
path = "src/lib.rs"

[[bin]]
name = "encrypted_chat"
path = "src/main.rs"
